# biksbit

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/backend/: Backend.h  CMakeLists.txt
src/backend/ALSA/: ALSA.cpp  ALSA.h
src/backend/openal/: OpenAL.cpp  OpenAL.h
src/engine/: CMakeLists.txt  CtrlEvent.h  Envelope.cpp  Envelope.h  Pipeline.cpp  Pipeline.h  SignalGenerator.cpp  SignalGenerator.h  SignalMixer.cpp  SignalMixer.h  SignalNode.h  SignalProcessor.cpp  SignalProcessor.h
src/engine/generators/: Oscillator.h  Sine.cpp  Sine.h
src/frontend/: Frontend.cpp  Frontend.h  SDL.cpp  SDL.h
src/frontend/stdin/: STDIN.cpp  STDIN.h
src/utils/: BlockingQueue.cpp  BlockingQueue.h  Logger.cpp  Logger.h  Params.cpp  Params.h
